--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "detect_swipe": "^2.1.4",
-    "jquery": "^3.2.1",
+    "jquery": "^2.0",
+    "jquery-mobile": "^1.5.0-alpha.1",
+    "mdbootstrap": "^4.8.10",
     "popper.js": "^1.12.3"
   },
   "repository": {
