--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "detect_swipe": "^2.1.4",
     "jquery": "^2.0",
     "jquery-mobile": "^1.5.0-alpha.1",
+    "material": "^0.4.1",
+    "material-components-web": "^3.2.0",
     "mdbootstrap": "^4.8.10",
     "popper.js": "^1.12.3"
   },
