--- a/_config.yml
+++ b/_config.yml
@@ -34,5 +34,5 @@ sass:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-exclude: ["Rakefile", vendor]
+exclude: []
 livereload: true
