--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "bootstrap": "^4.3.1",
     "detect_swipe": "^2.1.4",
     "jquery": "^2.0",
-    "jquery-mobile": "^1.5.0-alpha.1",
     "material": "^0.4.1",
     "material-components-web": "^3.2.0",
+    "material-design-icons": "^3.0.1",
     "mdbootstrap": "^4.8.10",
     "popper.js": "^1.12.3"
   },
