--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
-include: [_pages, node_modules]
+include: [_pages]
 markdown: kramdown
 sass:
   style: compressed
@@ -32,10 +32,5 @@ sass:
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
-  - Gemfile
-  - Gemfile.lock
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
+  [Gemfile, Gemfile.lock, vendor/bundle/, vendor/cache/, vendor/gems, vendor/ruby/]
 livereload: true
