--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@material/button": "^3.2.0",
+    "@material/card": "^3.2.0",
+    "@material/typography": "^3.1.0",
     "bootstrap": "^4.3.1",
     "detect_swipe": "^2.1.4",
     "jquery": "^2.0",
     "material": "^0.4.1",
-    "material-components-web": "^3.2.0",
     "material-design-icons": "^3.0.1",
     "mdbootstrap": "^4.8.10",
     "popper.js": "^1.12.3"
