--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: saryrottenbergmhc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Psychotherapy practive located in New York City, specializing in trauma, LGBTQ, couples, relationships, career changes.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://itsthecheat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 include: [_pages]
 markdown: kramdown
