--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Sary Rottenberg Psychotherapy - New York City based therapy for individuals and couples
-email: saryrottenbergmhc@gmail.com
+title: Rottenberg Therapy - New York City based therapy for individuals and couples
+email: sary@rottenbergtherapy.com
 description: >- # this means to ignore newlines until "baseurl:"
   Psychotherapy practive located in New York City, specializing in trauma, LGBTQ+, couples, relationships, career changes.
 baseurl: / # the subpath of your site, e.g. /blog
-url: "https://sary.lesliethe.dev" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.rottenbergtherapy.com" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 include: [_pages]
 markdown: kramdown
