--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@ email: sary@rottenbergtherapy.com
 description: >- # this means to ignore newlines until "baseurl:"
   Psychotherapy practive located in New York City, specializing in trauma, LGBTQ+, couples, relationships, career changes.
 baseurl: / # the subpath of your site, e.g. /blog
-url: "http://www.rottenbergtherapy.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.rottenbergtherapy.com"
+plugins:
+  - jekyll-sitemap # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 include: [_pages]
 markdown: kramdown
