--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: / # the subpath of your site, e.g. /blog
 url: "http://www.rottenbergtherapy.com"
 plugins:
-  - jekyll-sitemap # the base hostname & protocol for your site, e.g. http://example.com
+  - jekyll-sitemap
+  - jekyll-loading-lazy
 # Build settings
 include: [_pages]
 markdown: kramdown
