--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+brand: Rottenberg Therapy
 title: Rottenberg Therapy - New York City based therapy for individuals and couples
 email: sary@rottenbergtherapy.com
 description: >- # this means to ignore newlines until "baseurl:"
   Sary Rottenberg Psychotherapy provides therapy to individuals and couples in New York City and surrounding areas. We specialize in and treat relationships, career changes, trauma, depression, anxiety as well as issues affecting the LGBTQ community.
 baseurl: / # the subpath of your site, e.g. /blog
 url: "http://www.rottenbergtherapy.com"
+address: 245 W 29th St, New York, NY 10001
 plugins:
   - jekyll-sitemap
   - jekyll-loading-lazy
