--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,3 +1,40 @@
+sary:
+  name: Sary Rottenberg, LMHC
+  title: Owner/Founder
+  email: sary@rottenbergtherapy.com
+  specialties:
+    - Gender Variance
+    - People of Color
+    - Acculturation and Immigration
+    - Cult/Rigid Religious Upbringing
+    - Chronic Illness/Pain
+    - LGBTQIA++
+    - Hebrew
+    - Anxiety/Depression
+    - Career
+    - Trauma
+  blurb: |
+    When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is always to facilitate living the best life you can.
+
+    Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
 alana:
-  name:
-  email:
+  name: Alana Devine-Dunn, MHC-LP
+  email: alana@rottenbergtherapy.com
+  specialties:
+     - Prenatal/Postpartum Mental Health
+     - Infertility
+     - Premenstrual Dysphoric Disorder
+     - Young Adults
+     - Anxiety/Depression
+     - Trauma
+     - Loss/Mourning/Grief
+     - Chronic Illness and Caregivers
+     - Group Therapy
+     - Young Adults
+     - LGBTQIA++
+  blurb: |
+kate:
+  name: Kate Blemler, MHC-LP
+  email: kate@rottenbergtherapy.com
+  specialties:
+  blurb: |
