--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -2,39 +2,95 @@ sary:
   name: Sary Rottenberg, LMHC
   title: Owner/Founder
   email: sary@rottenbergtherapy.com
+  page: sary-rottenberg/
   specialties:
-    - Gender Variance
-    - People of Color
-    - Acculturation and Immigration
-    - Cult/Rigid Religious Upbringing
-    - Chronic Illness/Pain
-    - LGBTQIA++
-    - Hebrew
-    - Anxiety/Depression
-    - Career
-    - Trauma
+    - Gender Variance:
+        link: '#identity'
+    - People of Color:
+        link: '#poc'
+    - Acculturation and Immigration:
+        link: '#immigration'
+    - Cult/Rigid Religious Upbringing:
+        link: '#religion'
+    - Chronic Illness/Pain:
+        link: '#illness'
+    - LGBTQIA++:
+        link: '#identity'
+    - Hebrew:
+        link: '#hebrew'
+    - Anxiety/Depression:
+        link: '#anxiety'
+    - Career:
+        link: '#career'
+    - Trauma:
+        link: '#trauma'
   blurb: |
-    When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is always to facilitate living the best life you can.
+      When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is always to facilitate living the best life you can.
 
-    Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
+
+      Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
 alana:
   name: Alana Devine-Dunn, MHC-LP
   email: alana@rottenbergtherapy.com
+  page: alana-devine-dunn/
   specialties:
-     - Prenatal/Postpartum Mental Health
-     - Infertility
-     - Premenstrual Dysphoric Disorder
-     - Young Adults
-     - Anxiety/Depression
-     - Trauma
-     - Loss/Mourning/Grief
-     - Chronic Illness and Caregivers
-     - Group Therapy
-     - Young Adults
-     - LGBTQIA++
+     - Prenatal/Postpartum Mental Health:
+        link: '#postpartum'
+     - Infertility:
+        link: '#infertility'
+     - Premenstrual Dysphoric Disorder:
+        link: '#premenstrual'
+     - Young Adults:
+     - Anxiety/Depression:
+        link: '#anxiety'
+     - Trauma:
+        link: '#trauma'
+     - Loss/Mourning/Grief:
+        link: '#grief'
+     - Chronic Illness and Caregivers:
+        link: '#illness'
+     - Group Therapy:
+     - Young Adults:
+     - LGBTQIA++:
+        link: '#identity'
   blurb: |
+      Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative.
+
+      In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
 kate:
   name: Kate Blemler, MHC-LP
   email: kate@rottenbergtherapy.com
+  page: kate-blemler/
   specialties:
+     - Polyamory:
+     - LGBTQIA++:
+        link: '#identity'
+     - Sexuality:
+     - Identity:
+     - Anxiety/Depression:
+        link: '#anxiety'
+     - Couples and Family:
+        link: '#parenting'
+     - Trauma:
+        link: '#trauma'
+  blurb: |
+      My goal in working together will be to provide a safe space for us to explore recurring patterns and unconscious influences, such as unresolved traumas from our past, which can contribute to the difficulties we face in the present and become obstacles in living truly fulfilling lives.
+
+      In our work together, we will explore how these influences and patterns may result in unsatisfying relationships with ourselves and with others. We will also consider the environmental, societal, and interpersonal influences that impact our thoughts and actions.
+rene:
+  name: Rene Gonzalez, LMHC
+  email:
+  page:
+  specialties:
+  blurb: |
+cassandra:
+  name: Cassandra Robertson-Benjamin, MHC-LP
+  email:
+  page:
+  specialties:
+  blurb: |
+madison:
+  name: Madison Liddle, MHC-LP
+  email:
+  page:
   blurb: |
