--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -100,13 +100,16 @@ rene:
       - Panic Attacks:
       - Spanish:
   blurb: |-
-      My life experiences as someone at the intersection of various identities is what drew me to psychology, and to NYC.  These experiences — in addition to my training — inform the work I do, especially with clients who think of themselves as “different” from the rest.
+      Unconditional positive regard is a staple of the work I do, which means that I refrain from judgement, and accept my clients no matter who they are or what they share.  I use a variety of different approaches and techniques, like CBT, mindfulness, ACT, etc., but the relationship between myself and my client is often what gets the most attention, as research proves that having a positive relationship with your therapist is the best indicator of a good outcome.
 
-      Unconditional positive regard is a staple of the work I do, which means that I refrain from judgement, and accept my clients no matter who they are or what they share.  I use a variety of different approaches and techniques, like CBT, mindfulness, ACT, etc., but the relationship between myself and my client is often what gets the most attention, as research proves that having a positive relationship with your therapist is the best indicator of a good outcome.  If you decide to reach out to me, I’ll make time for a brief chat so we can figure out if I'm the right therapist for you.
+      If you decide to reach out to me, I’ll make time for a brief chat so we can figure out if I'm the right therapist for you.
   bio: |-
-      My life experiences as someone at the intersection of various identities is what drew me to psychology, and to NYC.  These experiences — in addition to my training — inform the work I do, especially with clients who think of themselves as “different” from the rest.
+      My life experiences as someone at the intersection of various identities is what drew me to psychology, and to NYC.  These experiences — in addition to my training — inform the work I do, especially with clients who think of themselves as “different” from the rest.  A Texan-turned-New Yorker, drawn to the city by affection for people-watching, music, architecture, and multiculturalism, I cite some of literature and film’s most complex characters as inspiration for becoming a psychotherapist, and enjoy interacting and helping clients get to deeper places of self-awareness.
 
-      Unconditional positive regard is a staple of the work I do, which means that I refrain from judgement, and accept my clients no matter who they are or what they share.  I use a variety of different approaches and techniques, like CBT, mindfulness, ACT, etc., but the relationship between myself and my client is often what gets the most attention, as research proves that having a positive relationship with your therapist is the best indicator of a good outcome.  If you decide to reach out to me, I’ll make time for a brief chat so we can figure out if I'm the right therapist for you.
+      As a Licensed Mental Health Counselor (LMHC), I provide services to people from diverse backgrounds. My specialties include treating individuals with complex identities from multicultural backgrounds, and I have extensive experience helping people who identify as LGBTQIA++, and individuals dealing with phase of life issues, trauma, depression, bipolar disorder, panic attacks, and anxiety.
+
+      I value learning, and actively work at deepening my expertise through ongoing education. I am working towards certification in peripheral biofeedback, and I hope to incorporate biofeedback and mindfulness practices to help sufferers of anxiety, panic attacks, and PTSD in the near future. I have completed training with numerous organizations and institutions, including Columbia University, the American Counseling Association, New York University, and the Institute for Contemporary Psychotherapy.
+
 cassandra:
   name: Cassandra Robertson-Benjamin, MHC-LP
   email: cassandra@rottenbergtherapy.com
@@ -159,10 +162,10 @@ madison:
       - PTSD:
       - CPTSD:
   blurb: |-
-      I graduated from Columbia University’s Counseling Psychology program where I earned a dual master’s degree in mental health counseling, specializing in LGBTQIA mental health. I earned an Advanced Certificate in Sexuality, Women, and Gender. I am trained in Cognitive Behavioral Therapy (CBT), psychodynamic psychotherapy, and am in the process of becoming an AASECT certified sex therapist.
+      Irvin Yalom has described the relationship between therapist and client to be one of mutual growth and discovery, aptly using the phrase fellow travelers to describe this unique bond.
+
+      I too like to conceptualize the therapeutic relationship in this way, believing wholeheartedly in its healing powers. As fellow travelers, we will work collaboratively in a non-judgmental space; using the relationship we create to understand and heal patterns in your life.
   bio: |
       I graduated from Columbia University’s Counseling Psychology program where I earned a dual master’s degree in mental health counseling, specializing in LGBTQIA mental health. I earned an Advanced Certificate in Sexuality, Women, and Gender. I am trained in Cognitive Behavioral Therapy (CBT), psychodynamic psychotherapy, and am in the process of becoming an AASECT certified sex therapist.
 
       Using a feminist, relational, and integrated CBT - psychodynamic approach to working with clients, I aim to empower clients to connect authentically with themselves, others, and the world at large. I am collaborative, direct, and often use humor to help clients work towards becoming the best versions of themselves, however they define it. I don’t think there is one right way to live or be, and my approach to therapy reflects that. I am firmly anti-racist, sex-positive, and radically inclusive.
-
-      Irvin Yalom has described the relationship between therapist and client to be one of mutual growth and discovery, aptly using the phrase fellow travelers to describe this unique bond. I too like to conceptualize the therapeutic relationship in this way, believing wholeheartedly in its healing powers. As fellow travelers, we will work collaboratively in a non-judgmental space; using the relationship we create to understand and heal patterns in your life.
