--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -130,7 +130,7 @@ cassandra:
     - LGBTQIA++:
         link: '#identity'
   blurb: |-
-      At first, we will strive to learn if we can connect. We will explore and acknowledge if this is a space you can allow yourself to be seen. We will look at your challenges and strengths to understand how you have
+      At first, we will strive to learn if we can connect. We will explore and acknowledge if this is a space you can allow yourself to be seen. We will look at your challenges and strengths to understand how you have arrived at the place you find yourself today.
 
       My goal is to create a safe space where exploration, questioning, discovery, and feeling are possible.  I seek to be a partner who holds a light to illuminate the unknown places.
 
