add nisreen, remove POC from specialties, plug virtual appts, update address and contact

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -70,6 +70,43 @@ cassandra:
       Those who have benefited from this work have dealt with challenges ranging from anxiety/depression, trauma, grief, relationship transitions and strife, major life change, abuse, as well as parent and child relationship issues. I welcome to my practice all those identifying as coming from marginalized groups as well as those who do not, but who nonetheless wish to be seen.
 
       I continue to explore the intersection between all my identities (woman, person of color, professional, daughter, etc.) so that I might be more empathetic to you. I have learned and been supervised by highly experienced therapists/mentors who stretch my thinking beyond what can be accomplished alone. You too will be my collaborator and teacher as we explore, name, and strive to reach your goals.
+nisreen:
+  name: Nisreen Osseili, EdM, MA, MHC-LP (she/her)
+  email: nisreen@rottenbergtherapy.com
+  page: nisreen-osseili/
+  image: /assets/img/headshots/Nisreen-1.jpg
+  specialties:
+    - LGBTQIA++:
+        link: '#identity'
+    - Disordered Eating:
+    - Body Image:
+    - Race-Related Stress:
+    - Anxiety:
+        link: '#anxiety'
+    - Depression:
+        link: '#anxiety'
+    - Identity:
+    - Self-esteem:
+    - Trauma:
+    - Young Adults:
+    - Group Therapy:
+    - Life Transitions:
+    - Relationships:
+    - Adolescents:
+  blurb: |-
+      I believe we long to be ourselves in a society that socializes us to feel and internalize inadequacy. We often find ourselves recreating patterns as a means to cope. Perhaps you have done some self-reflection and are seeking a deeper understanding or have not yet had the opportunity to explore and bring these patterns into awareness at all. In joining with you wherever you may be, I aim to help you strengthen your emotional awareness and develop a greater sense of introspection.
+  bio: |
+      Through our work together, I will support you on your journey back to your authentic self. My goal is to empower you with the self-confidence and self-compassion to live a life that serves the most innate version of you, trusting that you are already whole and complete.
+ 
+      I work with adolescents, adults, and couples around various interrelated concerns including disordered eating, body image, depression, trauma, self-worth, anxiety, sexuality, gender identity, and relationships. 
+    
+      I received a dual master’s degree in Mental Health Counseling from Columbia University. Currently, I am training at the Center for the Study of Anorexia & Bulimia (CSAB), specializing in the integrated treatment of eating disorders. I take great pride in prioritizing ongoing extensive training in psychodynamic and behavioral therapies, including CBT, DBT, RO-DBT. I have completed additional training in multicultural and racial considerations in therapy, microaggressions, treatment with TGNC patients, self-regulation, and sex therapy. I predominantly utilize a psychodynamic approach to not only reduce symptoms but also manage and understand the underlying issue. With that being said, our work will be tailored to your needs and strengths.
+
+      I am a middle eastern, queer, woman who recognizes that we do not leave our social identities at the door before we enter therapy. Utilizing an intersectional, relational, anti-racist, and anti-oppressive approach to counseling, I strive to create an empowering therapeutic environment for those who are marginalized and have been historically excluded from such spaces. Showing up can feel challenging but doing so is the first step to healing, resilience, and insight. 
+
+      I invite you to reach out if you are interested in working together. We offer telehealth and in-person services.
+
+
 sary:
   name: Sary Rottenberg, LMHC
   title: Owner/Founder
