--- a/_data/specialty.yml
+++ b/_data/specialty.yml
@@ -1,7 +1,6 @@
 poc:
-  - header: Providing A Space That Allows You To Express All Of Who You
-            Are
-    paragraph: |-
+  - header: Providing A Space That Allows You To Express All Of Who You Are
+    paragraph: |
       As a person of color (POC), you may have had an experience with a therapist that left you feeling misunderstood and even more marginalized. Perhaps you sought a space where you could express confusing emotions as they related to your race and/or intersecting identities, but you felt like the experience and its systems failed you.
 
       Finding the mental health support you need as a person of color can be a veritable challenge. One bad experience is enough to lead to distrust of “professionals.” Yet, without support, you may have difficulty navigating the layered challenges within your skin. How do you manage a
@@ -13,9 +12,8 @@ poc:
       If you have worked with a therapist in the past who lacked cultural responsiveness, the experience may have left you feeling frustrated, alienated, guarded, or angry. And you may have stopped sharing altogether out of fear for your emotional health.
 
       Yet spaces do exist that prioritize the emotional safety of persons of color. At Rottenberg Therapy, the therapists of color can offer you the space to explore issues without feeling belittled. Our BIPOC therapists will allow you to bring 100 percent of who you are to sessions so you can fully work through your challenges.
-  - header: Race Is An Added Stressor That Harms The Quality Of Life Of
-            People Of Color
-    paragraph: |-
+  - header: Race Is An Added Stressor That Harms The Quality Of Life Of People Of Color
+    paragraph: |
       Society plays a key role in the challenges systemically marginalized groups face, whether Black, Latinx, Asian, Native American, Indigenous, Pacific Islander, Desi, Queer, MENA, SWANA, and others. This marginalization often occurs through racism, which can be an invisible yet painful mark with effects that transfer through a lifetime and subsequent generations.
 
       In addition to the pain of racism, an unspoken social hierarchy also exists among people of color, with some minority groups seen more favorably by society than others. As an example, Asian people receive praise for displaying hard work and discipline, and for the same
@@ -36,9 +34,8 @@ poc:
       How does a Black female patient address disordered eating due to Black cultural values, for example, when society primarily highlights disordered eating through White females with White cultural values? Offering culturally-aware support for a Black patient, while ensuring that she also sees her experience through her own cultural lens, may be a challenge.  
 
       A BIPOC therapist will offer the nuanced approach you need to address your challenges. Through therapy for POC, you can find compassionate guidance to deal with problems and develop strategies to manage and overcome them.
-  - header: Therapy With People Of Color In Mind Offers The Safety You
-            Need To Work Through Your Struggles
-    paragraph: |-
+  - header: Therapy With People Of Color In Mind Offers The Safety You Need To Work Through Your Struggles
+    paragraph: |
       If you need a space where you feel safe and understood—without fear of gaslighting or need to explain who you are—then therapy for POC could be for you. Culturally-aligned therapy can provide consistent support to help you work through life challenges in your skin so you may
       move through the world with resilience and confidence no matter what issues you face.
 
@@ -46,35 +43,87 @@ poc:
       various backgrounds to overcome their challenges, including racism, sexism, misogynoir, sexual and gender identity, homophobia, anxiety, depression, trauma, relationship issues, disordered eating, grief, and more.
 
       Therapy for POC can give you the strength to feel empowered to face challenges within a marginalized identity. It will also:
-      
-    list: 
-      - list-item: Validate your experiences so you can begin to heal
-      - list-item: Provide compassionate and supportive guidance
-      - list-item: Offer a safe space to view yourself from the perspective of your cultural identity
-      - list-item: Help you find safety working through problems independent of your racial or ethnic identity
-      - list-item: Offer a culturally-aware approach that helps you work through experiences of microaggressions, racism, and internalized racism
-      - list-item: Allow you to express the range of emotions from your life experiences without judgment (e.g. frustration, joy, sadness, anger, surprise)
 
-    paragraph: |- 
+        - Validate your experiences so you can begin to heal
+        - Provide compassionate and supportive guidance
+        - Offer a safe space to view yourself from the perspective of your cultural identity
+        - Help you find safety working through problems independent of your racial or ethnic identity
+        - Offer a culturally-aware approach that helps you work through experiences of microaggressions, racism, and internalized racism
+        - Allow you to express the range of emotions from your life experiences without judgment (e.g. frustration, joy, sadness, anger, surprise)
+   
       At Rottenberg Therapy, our therapists take a psychodynamic/psychoanalytic approach to treatment, which works to uncover the emotional roots of any of your struggles and promotes self-awareness and self-examination. We think of this as gentle and deep work with long-lasting effects. And we encourage patients to bring in their dreams, fantasies, and their whole selves into the sessions in order to draw from the known/conscious parts as well as the unknown/unconscious parts of their psyche.
 
       Additionally, we are all trauma-informed therapists. We use mindfulness and body/somatic-based approaches, but we may also introduce other modalities to better understand the cause of your issues and speed recovery. Cognitive-Behavioral Therapy (CBT), for example, can help
       you transform negative thought patterns into more positive ones so that you can make more constructive decisions when life challenges arise. And Radically-Open Dialectical Behavior Therapy (RO-DBT) allows you to work through rigidity and the need to control aspects of your life by cultivating more openness, flexibility, and social connectedness.
-       
+
       Therapy for POC can allow you to experience some relief from being “othered”. Our BIPOC therapists have helped many clients honestly and effectively address their struggles and develop the skills that allowed them to tap into their innate ability to heal themselves. We believe that we can do the same for you.
 
       We do acknowledge that the fields in which we practice--psychology, psychotherapy, and psychoanalysis--have been founded on white supremacist, patriarchal, cisgender, and heteronormative ideas, and we all are working toward dismantling these ideas from within ourselves, this practice, and our field. We welcome conversations with you any time you may feel this promise is not upheld in sessions and we are committed to challenging ourselves to continue to move toward a radically inclusive space, within ourselves and in our society.
 
   - subheader: Maybe you still have questions about therapy for POC at our practice…
   - subheader: What about the White therapists at Rottenberg Therapy?
-    paragraph: |-
+    paragraph: |
       We are glad you are wondering. Some of our therapists identify as POC therapists and some identify as White. Our White therapists are all on a journey to uncover their own internalized white supremacy, the patriarchy, misogyny, and misogynoir. 
 
       If one of the non-POC therapists in our practice seems like a good fit for you, please do not hesitate to contact them. It will not be the same as seeing a therapist who is a person of color, and you may need to work through some difficult feelings with us, together, but we are
       committed to an open and honest dialogue about racism and all other ‘isms in this practice.
 
       Period.
-
   - header: Are You Ready To Find The Validation You Need To Heal?
-    paragraph: |-
+    paragraph: |
       You deserve to take up space, have a voice, and heal from your experiences. If you’re ready to take the next step toward internal freedom and self-healing, we invite you to contact us to see how our BIPOC therapists can help.
+lgbtqia:
+  - header: A Therapist Should Accept Your LGBTQIA Identity As A Given
+    paragraph: |
+      As a person who identifies as lesbian, gay, bisexual, transgender, queer, intersex, asexual, aromantic, or polyamorous, maybe you seek a safe space to work through life’s struggles. Perhaps you have faced subtle or overt pushback in life from friends or family regarding your queer identity. You may even feel trapped as you worry, Who can I open up to about details of my life--will I be judged?
+
+      Perhaps you seek a therapist who takes a step beyond acceptance and affirms your LGBTQIA+ identity. Maybe you seek an environment that “gets" the nuances and intersections within your specific identity. For example, if you are non-binary, you may be looking for a queer-affirming therapist who understands the implications of body dysphoria.
+
+      Finding the support you need as an LGBTQ person can be a challenge--you exist in a world not always sure where safety lies among friends, family, co-workers, and society. You may wonder if you will be antagonized for your identity because exists outside of the cisgendered, heteronormative mainstream.
+
+      When you experience ridicule for your sexual identity, you may develop social anxiety and become saddened by the inability of others to accept you as you are, further isolating yourself from others. Or maybe instead, you dissociate from yourself or find ways to numb in an attempt to cope with the confusion and pain of dealing with life stressors as a queer individual.
+
+      However, an empathetic approach to therapy can help release some of the pressure you may feel as an LGBTQIA person. Counseling can affirm your lived experiences and lay a foundation to work through life’s challenges more fully.
+  - header: LGBTQIA+ Individuals Face Unique Struggles In Today’s Society
+    paragraph: | 
+      Sometimes society “others” queer people. For those in this marginalized “out” group, having to explain who you are can feel like an experience of “otherness” at the hands of mainstream society. This experience can create obstacles to one’s self-perception and mental health. That someone may not understand an idea integral to your identity can make queer people feel frustrated, disappointed, isolated, or confused. And your existence as part of the LGBTQIA+ community deserves to be acknowledged and appreciated.
+
+      Society has evolved toward more acceptance of LGBT identities, yet we still have progress to make. Though the gay and lesbian communities have had a stronger presence in the mainstream in recent years, certain groups under the queer umbrella continue to exist at the margins, including transgender, non-binary, aromantic, asexual, gender fluid, and bisexual people.
+
+      It is within this cultural context that healing from struggles as a queer individual can be difficult. While some gay, lesbian, and queer people do have adequate support in the form of family, friends, or professionals to help them through life issues, others do not. And for those who do not, you might not have the strength to ask for help out of fear of being judged when sharing
+      intimate details of your life. Or if, as an LGBTQ person, you did find the courage to open up to a seemingly trustworthy person, maybe you experienced subtle or overt ridicule toward an aspect of your identity. Particularly as members of a marginalized group, to seek safety is natural, yet not everyone is fortunate enough to find it.
+
+      With a queer affirming therapist, however, you can find the safety you seek with someone who can see you for the person you truly are: your identity, character, personality, and goals. A queer-affirming LGBTQIA+ therapist can offer a safe space without judgment so you can explore different areas of your identity, work through challenges, and develop the skills to move through life more fully in therapy.
+  - header: LGBTQIA+ Therapy Can Show You Who You Are And What You’re Capable Of
+    paragraph: | 
+      If you’re looking for support that honors your unique perspective as a lesbian, gay, bisexual, transgender, queer, intersex, or asexual person, while also acknowledging that you still struggle with the same issues as anyone else, then LGBTQIA counseling could be for you. In counseling, we will question the white patriarchal mindset that has shaped much of modern-day psychology and replace antiquated ideas with a radical questioning of dogma tailored to your identity, experiences, and overall story.
+
+      Rottenberg Therapy offers a compassionate, non-judgmental environment where you can
+      explore your issues with empathetic support from a queer-affirming therapist. Our approach to counseling has helped many LGBTQIA patients to work through challenges like anxiety and depression, discrimination, bullying, harassment, coming out, lesbian, gay, and queer relationship counseling, family issues, gender dysphoria, substance abuse, addiction, and more.
+
+      Over the course of therapy, we will work with you to build a foundation that can help you feel more empowered, aware, and in control of your life. We will hold space for your story and use our sessions as a template to help you do the same for yourself. In therapy, our goal is that you learn more about who you are and use your inherent strengths as they relate to your LGBTQIA+ identity or life struggles. 
+
+      Additional topics we explore in queer-affirming counseling can include:
+
+        - Intergenerational trauma
+        - Unhealthy and healthy intergenerational messaging 
+        - Reparenting your inner child with love you may not have received as a child due to
+        neglect or abuse 
+        - Experiences in childhood that contribute to challenges you experience as an adult today
+        (referred to as the psychodynamic approach)
+
+      At Rottenberg Therapy, our therapists take a psychodynamic/psychoanalytic approach to treatment, which works to uncover the emotional roots of any of your struggles and promotes self-awareness and self-examination. We think of this as gentle and deep work with long-lasting effects. And we encourage patients to bring in their dreams, fantasies, and their whole selves into the sessions in order to draw from the known/conscious parts as well as the unknown/unconscious parts of their psyche.
+
+      Additionally, we are all trauma-informed therapists. We use mindfulness and body/somatic-based approaches, but we may also introduce other modalities to better understand the cause of your issues and speed recovery. Cognitive-Behavioral Therapy (CBT), for example, can help you transform negative thought patterns into more positive ones so that you can make more constructive decisions when life challenges arise. And Radically-Open Dialectical Behavior
+      Therapy (RO-DBT) allows you to work through rigidity and the need to control aspects of your life by cultivating more openness, flexibility, and social connectedness.
+
+      We cannot promise that counseling will deliver you from every hardship you face, yet through talking to one of our culturally responsive therapists, you can better understand your struggles and develop coping strategies to better manage them. We believe that there is great relief through the process of uncovering one's unconscious beliefs, hidden desires, and internal conflicts. Through expanding your sense of self by getting to know yourself better, we find that people understand humanity and the world around them, and can find more internal peace.
+
+      We do acknowledge that the fields in which we practice--psychology, psychotherapy, and psychoanalysis--have been founded on white supremacist, patriarchal, cisgender, and heteronormative ideas, and we all are working toward dismantling these ideas from within ourselves, this practice, and our field. We welcome conversations with you any time you may feel this promise is not upheld in sessions and we are committed to challenging ourselves to continue to move toward a radically inclusive space, within ourselves and in our society.
+  - subheader: Maybe you still have questions about LGBTQIA+ Therapy...
+  - subheader: Are all of your therapists queer?
+    paragraph: |
+      All therapists in this practice are queer-affirming or queer therapists. What this means to us is that even if your therapist is not queer, they have been and continue to be on a journey to make themselves knowledgeable, responsive, curious, and responsible to understand the nuances of queer life. Please let us know if you have a specific request for a queer therapist.
+  - header: Are You Ready To Find The Support To Tap Into Your Inner Strength?
+    paragraph: |
+      Working through issues alone can be difficult, particularly in a world that isn’t always accepting of difference. If you’re ready to take the next step toward a space that honors this difference, we invite you to contact us to see how LGBT-affirming psychotherapy can help.
