add images to assets

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -106,6 +106,35 @@ nisreen:
       I am a middle eastern, queer, woman who recognizes that we do not leave our social identities at the door before we enter therapy. Utilizing an intersectional, relational, anti-racist, and anti-oppressive approach to counseling, I strive to create an empowering therapeutic environment for those who are marginalized and have been historically excluded from such spaces. Showing up can feel challenging but doing so is the first step to healing, resilience, and insight.
 
       I invite you to reach out if you are interested in working together. We offer telehealth and in-person services.
+taylor:
+  name: Taylor Mefford, MHC-LP
+  email: taylor@rottenbergtherapy.com
+  phone: 914-809-0498
+  page: taylor-mefford/
+  image: /assets/img/headshots/Taylor-1.jpg
+  specialties: 
+    - Loss/Mourning/Grief:
+    - College Students/Young Adults:
+    - Anxiety:
+    - Depression:
+    - Trauma:
+    - LGBTQIA++:
+    - Group Therapy:
+    - Religious/Spiritual Issues:
+    - EMDR:
+    - Life Transitions:
+  blurb: |-
+      Deciding to seek professional help for coping with challenges in your life is a big step. I strive to create a safe, non-judgmental space where we can address anxiety and depression openly through identifying and exploring underlying disappointments, losses, and traumas. Through this process, we’ll work together to rewrite your “story of loss” into a “story of growth.” It is my goal that clients will be able to use the safety of our relationship to learn how to approach life’s difficulties with curiosity instead of fear.
+
+      Together, we can find ways to address these challenges – such as the death of a loved one, a romantic break-up, LGBTQ identity exploration, or religious trauma – with courage and authenticity, and embark on a journey toward self-discovery, healing, and peace of mind.
+  bio: |
+      I work with individuals facing major losses in their lives, including the death of a loved one, the ending of platonic and romantic relationships, significant medical diagnoses such as HIV/AIDS and religious/spiritual changes (sometimes called a “crisis of faith”). Additionally, I have experience in working with LGBTQ+ individuals in identity exploration, the coming-out process, and dating/relationship challenges.
+
+      I received my master’s degree in mental health counseling from Fordham
+      University and completed a clinical internship at the Purchase College
+      Counseling Center. Since graduating, I’ve pursued training in trauma treatment, grief counseling, and psychodynamic therapies. I am also trained to provide Eye Movement Desensitization and Reprocessing (EMDR) therapy.
+
+      Central to my work with clients is a commitment to antiracist, anticapitalist practice. In our work together, we’ll examine how systemic factors influence your worldview and the challenges you face. My approach to therapy is grounded in psychodynamic, existential-humanistic, and narrative frameworks, and I employ a solution-focused strategy when appropriate. Above all, it is my priority that therapy is a refuge from day-to-day suffering where we can work together to find joy.
 sary:
   name: Sary Rottenberg, LMHC
   title: Owner/Founder
